# mlops-wine-prediction

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  template.py
research/: 1_data_ingestion.ipynb  2_data_validation.ipynb  3_data_transformation.ipynb  4_model_trainer.ipynb  5_model_evaluation.ipynb  research.ipynb
src/mlops_wine_prediction/: __init__.py
src/mlops_wine_prediction/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/mlops_wine_prediction/config/: configuration.py
src/mlops_wine_prediction/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/mlops_wine_prediction/utils/: common.py
templates/: index.html  results.html
